Grundgeruest, Vorschlaege was besser machen!

--- a/YourOwnGame/app/src/main/res/values/strings.xml
+++ b/YourOwnGame/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
-    <string name="app_name">Your Own Game</string>
+    <string name="app_name">Your Own Game!</string>
+    <string name="starte_Spiel"> Starten! </string>
+
+    <string name="gameViewActivity">GameView</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
 </resources>
