--- a/YourOwnGame/app/src/main/res/values/strings.xml
+++ b/YourOwnGame/app/src/main/res/values/strings.xml
@@ -25,9 +25,13 @@
     <string name="dialog_generic_button_negative">Cancel</string>
     <!-- DialogMgr:GameExit/Over -->
     <string name="dialog_generic_gameOver_title">Game over</string>
-    <string name="dialog_generic_gameOver_msg">You died!</string>
+    <string name="dialog_generic_gameOver_msg">You died! Your points: %1$d</string>
     <string name="dialog_generic_button_positive_gameOverAccept">OK</string>
     <string name="dialog_generic_button_negative_gameOverRevive">Revive</string><!-- TODO: In future with watching rewarded ad -->
+
+    <!-- GameActivity -->
+    <string name="gameActivity_highscore_lbl">Highscore</string>
+    <string name="gameActivity_highscore_val">0</string> <!-- Default highscore -->
 
     <!-- TODO: Jori Strings (Please categorize also with id WILL get really confusing in future) -->
     <string name="Shoot">Shoot!</string>
