--- a/YourOwnGame/app/src/main/res/values/strings.xml
+++ b/YourOwnGame/app/src/main/res/values/strings.xml
@@ -38,5 +38,11 @@
     <string name="munition">Munition: 500/500</string>
     <string name="setting">Einstellungen</string>
     <string name="yourGame">Your Game</string>
+    <string name="title_activity_highscore">Highscore</string>
+    <string name="tab_text_1">Personal Highscores</string>
+    <string name="tab_text_2">Social Highscores</string>
+    <string name="tab_text_3">Worldwide Highscores</string>
+    <string name="action_settings">Settings</string>
+    <string name="section_format">Hello World from section: %1$d</string>
 
 </resources>
