--- a/YourOwnGame/app/src/main/res/values/strings.xml
+++ b/YourOwnGame/app/src/main/res/values/strings.xml
@@ -49,4 +49,8 @@
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
 
+    <!-- LEVELs -->
+    <string name="level_levelName_harmlessSky">Harmless Sky</string>
+    <string name="level_levelName_nightRider">Night Rider</string>
+
 </resources>
