--- a/YourOwnGame/app/src/main/res/values/strings.xml
+++ b/YourOwnGame/app/src/main/res/values/strings.xml
@@ -21,17 +21,6 @@
     <string name="adManager_msg_rewardAd_whatIsMyReward">After watching this video you spawn a few seconds before the game was over.</string>
     <string name="adManager_success_rewardAd_rewardReceived">You can now continue your game :)</string>
 
-    <!-- DialogMgr -->
-    <string name="dialog_generic_error_title">Dialog error</string>
-    <string name="dialog_generic_error_msg">No text found. Please contact administrator.</string>
-    <string name="dialog_generic_button_positive">OK</string>
-    <string name="dialog_generic_button_negative">Cancel</string>
-    <!-- DialogMgr:GameExit/Over -->
-    <string name="dialog_generic_gameOver_title">Game over</string>
-    <string name="dialog_generic_gameOver_msg">You died! Your Points = %1$d </string>
-    <string name="dialog_generic_button_positive_gameOverAccept">OK</string>
-    <string name="dialog_generic_button_negative_gameOverRevive">Revive</string><!-- TODO: In future with watching rewarded ad -->
-
     <!-- GameActivity -->
     <string name="gameActivity_highscore_val">0</string> <!-- Default highScore -->
 
@@ -39,15 +28,7 @@
     <string name="gameViewActivity">GameView</string>
 
     <!-- UI Descriptions -->
-    <string name="shoot">Shoot!</string>
-    <string name="munition">Ammunition: 500/500</string>
     <string name="settings">Settings</string>
-    <string name="yourGame">Your Game</string>
-    <string name="title_activity_highscore">Highscore</string>
-    <string name="tab_text_1">Personal Highscores</string>
-    <string name="tab_text_2">Social Highscores</string>
-    <string name="tab_text_3">Worldwide Highscores</string>
-    <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
 
     <!-- LEVELs -->
@@ -63,10 +44,6 @@
     <!-- LevelHierarchy View -->
     <string name="targetPoints">Target: $1$d Points</string>
 
-    <!-- Success-Dialog descriptions -->
-    <string name="level_achieve_txt">Success! You completed level: %1$d</string>
-    <string name="equals"> = %1$d </string>
-    <string name="yourScore"> Your Score = %1$d</string>
 
     <!-- Swap-Fruit-Swipe-View -->
     <string name="sliderViewMeloons"> Meloons </string>
@@ -74,7 +51,19 @@
     <string name="sliderViewPinapos"> Pinapos </string>
     <string name="sliderViewAmountCollected"> Collected: $1%d</string>
     <string name="sliderViewMeloonDescription"> The Meloons are quite often to see. The will give you X and you gain 100 Points per Meloon.</string>
-    <string name="title_activity_shop">ShopActivity</string>
+
+
+    <!-- DIALOGUES ++++++++++++++++++++++++++++++++++++++++ -->
+    <!-- GameOver-Dialog -->
+    <string name="dialog_gameover_title">Game Over</string>
+    <string name="dialog_gameover_description">Unfortunately, you died! But you could continue this game by watching a short video, just click \'Revive\'.</string>
+    <string name="dialog_gameover_btn_positive">Revive</string>
+    <string name="dialog_gameover_btn_negative">Close</string>
+    <!-- LevelAchieved-Dialog -->
+    <string name="dialog_levelachieved_title">You won!</string>
+    <string name="dialog_levelachieved_description">Congratulation, you have won this level.</string>
+    <string name="dialog_levelachieved_btn_positive">Next level</string>
+    <string name="dialog_levelachieved_btn_negative">Close</string>
 
 
 </resources>
