--- a/YourOwnGame/app/src/main/res/values/strings.xml
+++ b/YourOwnGame/app/src/main/res/values/strings.xml
@@ -49,7 +49,7 @@
     <string name="sliderViewMeloons"> Meloons </string>
     <string name="sliderViewAvocis"> Avocis </string>
     <string name="sliderViewPinapos"> Pinapos </string>
-    <string name="sliderViewAmountCollected"> Collected: $1%d</string>
+    <string name="sliderViewAmountCollected"> Collected: %1$d</string>
     <string name="sliderViewMeloonDescription"> The Meloons are quite often to see. The will give you X and you gain 100 Points per Meloon.</string>
 
 
