created a "little World" with 4 + 1 levels, last one is a bonuslevel. dont take this to serious, i just wanted to show what we're intending to do. codeparts are horrible, enjoy
Also the GUI is more like a piece of catshit, resolutions dont match,
lots of things to do better. dont take that push too serious haha

--- a/YourOwnGame/app/src/main/res/values/strings.xml
+++ b/YourOwnGame/app/src/main/res/values/strings.xml
@@ -36,6 +36,7 @@
     <string name="level_levelName_nightRider">Night Rider</string>
     <string name="level_levelName_endlessDawn">Endless Dawn</string>
     <string name="level_levelName_darkDescent">Dark Descent</string>
+    <string name="level_levelName_bonusLevel01">Bonus Level!</string>
     <string name="success">Success! You Achieved level x</string>
 
     <!-- LevelAssigments -->
@@ -74,7 +75,6 @@
     <string name="dialog_pausegame_description">Game has been paused successfully.</string>
     <string name="dialog_pausegame_btn_positive">Resume</string>
     <string name="dialog_pausegame_btn_negative">Exit</string>
-
 
 
 </resources>
