--- a/YourOwnGame/app/src/main/res/values/strings.xml
+++ b/YourOwnGame/app/src/main/res/values/strings.xml
@@ -31,6 +31,9 @@
     <string name="settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
 
+    <!-- Worlds -->
+    <string name="world_worldName_earth">Die Erde</string>
+
     <!-- LEVELs -->
     <string name="level_levelName_harmlessSky">Harmless Sky</string>
     <string name="level_levelName_nightRider">Night Rider</string>
