--- a/YourOwnGame/app/src/main/res/values/strings.xml
+++ b/YourOwnGame/app/src/main/res/values/strings.xml
@@ -2,6 +2,9 @@
     <!-- GLOBAL -->
     <string name="appName">Flying Fishes - Save the Fruits</string>
 
+    <!-- Error -->
+    <string name="error_gameViewActivity_lvlLoad">Could not load level.</string>
+
     <!-- Content Descriptions of images etc. -->
     <string name="mainActivity_welcomeImg">The Game</string>
 
