--- a/YourOwnGame/app/src/main/res/values/strings.xml
+++ b/YourOwnGame/app/src/main/res/values/strings.xml
@@ -29,7 +29,7 @@
     <string name="gameActivity_highscore_val">0</string> <!-- Default highScore -->
 
     <!-- TODO: PLEASE ORDER ALL STRINGS AS SEEN ABOVE OR WITH ANOTHER STRUCTURE, OTHERWISE THIS FILE WILL BE HORRIBLE SOON :( -->
-    <string name="gameViewActivity">GameView</string>
+    <string name="drawableSurfaceActivity">GameView</string>
 
     <!-- UI Descriptions -->
     <string name="settings">Settings</string>
